# opencv_pyqt5

./: .gitignore  LICENSE  README.md  fontawesome.qrc  icon.qrc  requirements.txt
.github/workflows/: build-release.yml
cv_matlab/: bestT.m  color_extracting.mlx  common.m  e2_gray_level_transformation.mlx  e3_smooth_sharpening.mlx  e4_edge_detection.mlx  e5.mlx  exp6.mlx  function_map.mlx  genlaplacian.m  gpout.tif  hblpf.m  helpf.m  hglpf.m  hilpf.m  imLinearAdjust.m  imLinearAdjust_n.m  imLogAdjust.m  imPowerAdjust.m  img_read.mlx  inRange.m  ipout.tif  mapto01.m  mathgraph.mlx  myHisteq.m  my_imdilate.m  my_imerode.m  test.m  untitled.mlx
design/: Fourier.ui  binary.ui  contrast_ratio.ui  edge.ui  mainwindow.ui  noise.ui  smooth_sharp.ui  ui_binary.py  ui_contrast_ratio.py  ui_noise.py  ui_smooth_sharp.py  ui_to_py.ps1
open_cv_gl_qt/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  README.md  vcpkg.json
open_cv_gl_qt/src/: main.cpp  task1.cpp
open_cv_gl_qt/tests/: test_main.cpp
opengl_lab/: .gitignore  CMakeLists.txt  CMakeLists_bak.txt  Doxyfile  README.md  main.cpp
opengl_lab/src/: mygl.cpp
src/: img_pro_utils.py  main.py
src copy/: main_tmp.py  writethecsv.py
src copy/examples/: iconshow.py  showFront.py  style_iconshow.py
src/ui/: ui_Fourier.py  ui_edge.py  ui_mainwindow.py
